# ddevd

./: LICENSE  README.md  pyproject.toml
experiments/: synthetic_data.py
src/ddevd/: __init__.py  ddevd.py  distributions.py  evd.py  helpers.py  mev.py  optimal_bandwidth.py  transforms.py
tests/: conftest.py  test_bandwidth_calculator.py  test_ddevd_basic.py  test_distribution_evd.py  test_empirical_cdf_estimate.py  test_input_validation.py  test_kernel_helper.py  test_mev_distribution.py  test_optimization_positions.py  test_quantile_return_levels.py  test_transforms.py  test_weibull_fit.py
